[package]
name = "nvidia-gpu-exporter"
version = "1.0.0"
edition = "2021"
authors = ["Mike Nugent <mike@michaelnugent.org>"]
description = "Prometheus exporter for NVIDIA GPUs using NVML"
license = "MIT"
repository = "https://github.com/michaelnugent/nvidia-gpu-exporter"
readme = "README.md"

[dependencies]
nvml-wrapper = "0.7"
prometheus = "0.13"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
mockall = "0.12"
tower = "0.5"
